--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "scripts": {
         "start": "node server.js"
     },
+    "engines":{
+        "node":"16.15.0"
+    },
     "dependencies": {
         "express": "4.18.1"
     },
